<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ratbackground">

    <TextView
        android:id="@+id/registration_create_username_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_username_label"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="26dp" />

    <EditText
        android:id="@+id/registration_create_username_entry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/empty_message"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registration_create_username_label"
        app:layout_constraintHorizontal_bias="0.502"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/registration_create_password_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_password_label"
        app:layout_constraintTop_toBottomOf="@id/registration_create_username_entry"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        android:layout_marginTop="31dp" />

    <EditText
        android:id="@+id/registration_create_password_entry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/registration_create_password_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/registration_reenter_password_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reenter_password_label"
        app:layout_constraintTop_toBottomOf="@id/registration_create_password_entry"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="30dp" />

    <EditText
        android:id="@+id/registration_reenter_password_entry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/registration_reenter_password_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintVertical_bias="0.074"
        android:layout_marginTop="8dp" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account_message"
        app:layout_constraintTop_toBottomOf="@+id/registration_reenter_password_entry"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="32dp"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintHorizontal_bias="0.502" />

    <TextView
        android:id="@+id/registration_invalid_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/invalid_password_message"
        android:textColor="@color/errorPrimary"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/registration_create_password_entry" />

    <TextView
        android:id="@+id/registration_invalid_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/invalid_username_message"
        android:textColor="@color/errorPrimary"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/registration_create_username_entry" />

    <TextView
        android:id="@+id/registration_password_mismatch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registration_password_mismatch"
        android:textColor="@color/errorPrimary"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/registration_reenter_password_entry"
        app:layout_constraintHorizontal_bias="0.502" />

</android.support.constraint.ConstraintLayout>