<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <fragment
        android:id="@+id/map"
        android:layout_height="0dp"
        android:layout_width="0dp"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/map_button"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:text="@string/map_message"
        android:textAllCaps="false"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/rat_graph_button"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:text="@string/graph_message"
        android:textAllCaps="false"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@+id/map_button"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/rat_data_list_button"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:text="@string/rat_list_data_message"
        android:textAllCaps="false"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@+id/rat_graph_button"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/profile_button"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:text="@string/profile_message"
        android:textAllCaps="false"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@+id/rat_data_list_button"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/settings_button"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:text="@string/settings_message"
        android:textAllCaps="false"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@+id/profile_button"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/report_rat_button"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:text="@string/report_message"
        android:textAllCaps="false"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@+id/settings_button"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/logout_button"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:text="@string/logout_message"
        android:textAllCaps="false"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@+id/report_rat_button"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/apply_filters_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Apply"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <EditText
        android:id="@+id/date2_dash_map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@id/apply_filters_button"/>

    <TextView
        android:id="@+id/date_separator_dash_map_text"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="to"
        android:layout_marginBottom="8dp"
        app:layout_constraintRight_toLeftOf="@id/date2_dash_map"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <EditText
        android:id="@+id/date1_dash_map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/date_separator_dash_map_text"/>

    <Button
        android:id="@+id/return_to_dashboard_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Dashboard"
        android:textAllCaps="false"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ProgressBar
        android:id="@+id/progress_bar_dash_map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>