<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apply_label"
        android:onClick="onApplyButtonClicked"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel_message"
        android:onClick="onCancelButtonClicked"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <CheckedTextView
                android:id="@+id/date_filter_check_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date_time_label"
                android:textSize="32sp"
                android:checkMark="?android:attr/listChoiceIndicatorMultiple"
                android:checked="false"
                android:gravity="center_vertical"
                android:onClick="dateAndTimeCheckClicked"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"/>

            <Button
                android:id="@+id/date_button_filter_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:onClick="showDate1PickerDialog"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/date_filter_check_text"/>

            <Button
                android:id="@+id/date_button_filter_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:onClick="showDate2PickerDialog"
                app:layout_constraintTop_toBottomOf="@id/date_filter_check_text"
                app:layout_constraintRight_toRightOf="parent"/>

            <Button
                android:id="@+id/time_button_filter_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:onClick="showTime1PickerDialog"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/date_button_filter_1"/>

            <Button
                android:id="@+id/time_button_filter_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:onClick="showTime2PickerDialog"
                app:layout_constraintTop_toBottomOf="@id/date_button_filter_2"
                app:layout_constraintRight_toRightOf="parent"/>

        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</LinearLayout>
